--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,5 +1,5 @@
 # Build stage
-FROM node:16-alpine as build
+FROM node:18-alpine as build
 
 # Set working directory
 WORKDIR /app
@@ -8,7 +8,7 @@ WORKDIR /app
 COPY mufg-insurance-frontend/package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN rm -f package-lock.json && npm install
 
 # Copy source code
 COPY mufg-insurance-frontend/ .
