--- a/mufg-insurance-frontend/nginx.conf
+++ b/mufg-insurance-frontend/nginx.conf
@@ -9,7 +9,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
-    add_header Content-Security-Policy "default-src 'self' https://api.your-domain.com;";
+    add_header Content-Security-Policy "default-src 'self' http://backend:8000 'unsafe-inline' 'unsafe-eval' data: blob:;";
 
     location / {
         try_files $uri $uri/ /index.html;
